# EasyAtCal

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  HANDOFF.md  HTTPToolkit_2026-04-20_10-42.har  HTTPToolkit_2026-04-20_12-00.har  Makefile  README.md  SECURITY.md  config.example.yaml  mkdocs.yml  protection.json  pyproject.toml  test_regex.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/pages/: contributing.md  index.md
docs/superpowers/plans/: 2026-04-19-easyatcal-implementation.md
docs/superpowers/specs/: 2026-04-19-easyatcal-design.md
easyatcal/: __init__.py  api.py  api_session.py  auth_user.py  cli.py  config.py  logging_setup.py  models.py  orchestrator.py  paths.py  session.py  state.py  sync.py
easyatcal/backends/: base.py  eventkit.py  ics.py
examples/launchd/: com.easyatcal.watch.plist
examples/systemd/: eaw-sync-watch.service
tests/: test_api_auth.py  test_api_fetch.py  test_api_session.py  test_cli_auth.py  test_cli_config.py  test_cli_config_path.py  test_cli_doctor.py  test_cli_login.py  test_cli_schedule.py  test_cli_state.py  test_cli_sync.py  test_config.py  test_e2e_ics.py  test_e2e_integration.py  test_logging_setup.py  test_models.py  test_orchestrator.py  test_session.py  test_state.py  test_sync.py
tests/backends/: test_base.py  test_eventkit.py  test_ics.py
tests/fixtures/: config_valid.yaml  easyatwork_shifts.json
