[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyatcal"
version = "0.1.0"
description = "One-way sync of easy@work shifts to Apple Calendar."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ailcope"}]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "icalendar>=5.0",
    "typer>=0.12",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
eventkit = ["pyobjc-framework-EventKit>=10.0; sys_platform == 'darwin'"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "freezegun>=1.4",
]

[project.scripts]
eaw-sync = "easyatcal.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["easyatcal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
