[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyatcal"
version = "0.3.0"
description = "One-way sync of easy@work shifts to Apple Calendar."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ailcope", email = "security@ailcope.dev"}]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "icalendar>=5.0",
    "typer>=0.12",
    "platformdirs>=4.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
eventkit = ["pyobjc-framework-EventKit>=10.0; sys_platform == 'darwin'"]
playwright = ["playwright>=1.44"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "freezegun>=1.4",
    "mypy>=1.10",
    "types-PyYAML",
    "ruff>=0.6",
]

[project.scripts]
eaw-sync = "easyatcal.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["easyatcal"]

[tool.hatch.build.targets.wheel.force-include]
"easyatcal/py.typed" = "easyatcal/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.coverage.run]
omit = [
    # Playwright-driven, exercised only on real browsers.
    "easyatcal/auth_user.py",
    # EventKit shim is macOS + PyObjC, exercised via mocks only.
    "easyatcal/backends/eventkit.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017", "B018"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["playwright.*", "EventKit", "Foundation"]
ignore_missing_imports = true
